# House-Price-Prdiction

./: House_Pridiction.ipynb  clean_data_rent.csv  new_house_rentel.ipynb  outlier_remove.ipynb  pyproject.toml
