[tool.poetry]
name = "house-price-prdiction"
version = "0.1.0"
description = ""
authors = ["MuhammadAizazA <aizaz.ali.shah.0205@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
ipywidgets = "^8.1.1"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
